--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "web wa js bot",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "me",
@@ -18,6 +18,7 @@
     "openai": "^4.26.0",
     "path": "^0.12.7",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
